<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <artifactId>JsfEeHzPgApp</artifactId>
        <groupId>com.longz.thss.github</groupId>
        <version>1.0</version>
    </parent>

    <groupId>com.longz.thss.lib</groupId>
    <artifactId>ThssHzLibModule</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>
    <name>ThssHzLibModule</name>

    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <junit.version>5.7.1</junit.version>
        <payara.version>5.2021.4</payara.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>fish.payara.extras</groupId>
            <artifactId>payara-embedded-all</artifactId>
            <version>${payara.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.ow2.asm</groupId>
            <artifactId>asm-tree</artifactId>
            <version>7.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>fish.payara.extras</groupId>
            <artifactId>payara-embedded-all</artifactId>
            <version>5.2021.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>fish.payara.extras</groupId>
            <artifactId>payara-embedded-all</artifactId>
            <version>5.2021.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>fish.payara.extras</groupId>
            <artifactId>payara-embedded-all</artifactId>
            <version>5.2021.4</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>fish.payara.extras</groupId>
            <artifactId>payara-embedded-all</artifactId>
            <version>5.2021.4</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <release>11</release>
                    <target>11</target>
                    <compilerArgs>
                        <!--<arg>-verbose</arg>
                        <arg>-Xlint:all,-options,-path</arg>-->
                        <arg>--add-exports</arg>
                        <arg>org.objectweb.asm.tree.analysis/com.hazelcast.logging=com.longz.thss.ThssHzLibModule</arg>
                        <arg>--add-exports</arg>
                        <arg>org.objectweb.asm.tree.analysis/com.hazelcast.core=com.longz.thss.ThssHzLibModule</arg>
                        <arg>--add-exports</arg>
                        <arg>org.objectweb.asm.tree.analysis/com.hazelcast.cluster=com.longz.thss.ThssHzLibModule</arg>
                        <arg>--add-exports</arg>
                        <arg>org.objectweb.asm.tree.analysis/com.hazelcast.config=com.longz.thss.ThssHzLibModule</arg>
                        <arg>--add-exports</arg>
                        <arg>org.objectweb.asm.tree.analysis/javax.inject=com.longz.thss.ThssHzLibModule</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>